welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: not found: type color
  def faireDiagAr(c:color) {
                    ^