welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  def marqueSol() {
    baisseBrosse()
    gauche(); droite()
    leveBrosse()
  }
  
  def faireDiagAv(c:Color) {
    setCouleurBrosse(c)
    marqueSol()
    avance()
    gauche()
    avance()
    marqueSol()
    recule()
    droite()
    recule()
  }
  
  def faireDiagAr(c:color) {
    setCouleurBrosse(c)
    marqueSol()
    recule()
    gauche()
    recule()
    marqueSol()
    avance()
    droite()
    avance()
  }
  
  avance(2)
  faireDiagAr(Color.GREEN)
}